# wasm-snake

./: .gitignore  Cargo.toml  README.md  index.html  style.css
pkg/: README.md  package.json  wasm_snake.js  wasm_snake_bg.d.ts  wasm_snake_bg.wasm
src/: canvas.rs  input.rs  lib.rs  utils.rs
