[package]
name = "wasm-snake"
version = "0.1.0"
authors = ["wiktorwieclaw <lonevixu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
js-sys = "*"

[dependencies.web-sys]
version = "=0.3.35"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "EventTarget",
    "EventListener",
    "KeyboardEvent",
    "Event",
    "CssStyleDeclaration"
]